<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023-2024 The Evolution X Project
                   2016-2022 crDroid Android Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- XiaomiParts -->
    <string name="xiaomi_parts_title">Xiaomi Parts</string>
    <string name="kernel_node_access_error">Kernel node access failed! Please ensure the provided path to the sysfs or procfs attribute is accurate, that it has appropriate permissions, and the SELinux policies are properly configured.</string>
    <string name="kernel_node_returned_value_unknown">No string resource found for the value returned by the node.</string>
    <string name="tile_add">Add tile</string>
    <string name="tile_added">Tile added</string>
    <string name="tile_not_added">Tile not added</string>
    <string name="tile_already_added">Tile already added</string>
    <string name="tile_on">On</string>
    <string name="tile_off">Off</string>
    <string name="tile_camera_in_use">Camera in use</string>

    <!-- Auto hbm -->
    <string name="auto_hbm_title">Auto sunlight mode</string>
    <string name="auto_hbm_main_switch_title">Enable Auto sunlight mode</string>
    <string name="auto_hbm_summary">Automatically increases screen brightness in bright light.</string>
    <string name="auto_hbm_activation_threshold_title">Activation threshold</string>
    <string name="auto_hbm_activation_threshold_summary">Increases brightness when the ambient light exceeds this value</string>
    <string name="auto_hbm_deactivation_threshold_title">Deactivation threshold</string>
    <string name="auto_hbm_deactivation_threshold_summary">Brightness returns to normal when the ambient light is below this value</string>
    <string name="auto_hbm_threshold_error">The activation threshold must be higher than the deactivation threshold.</string>
    <string name="auto_hbm_delay_title">Activation/deactivation delay</string>
    <string name="auto_hbm_delay_summary">Prevents abrupt changes in screen brightness</string>
    <string name="auto_hbm_warning">Prolonged use of this mode can cause the device to heat up and may reduce battery life.</string>    

    <!-- Auto dc dimming -->
    <string name="auto_dc_dim_title">Auto anti-flicker mode</string>
    <string name="auto_dc_dim_main_switch_title">Use Auto anti-flicker mode</string>
    <string name="auto_dc_dim_summary">Reduces screen flicker and eye strain in low light.</string>
    <string name="auto_dc_dim_threshold_title">Activation threshold</string>
    <string name="auto_dc_dim_threshold_summary_brightness">Activates when the brightness is below this level</string>
    <string name="current_brightness_title">Current brightness</string>
    <string name="set_current_brightness_button_title">Use current brightness</string>
    <string name="set_current_brightness_button_summary">Sets the activation point to your screen current brightness level.</string>
    <string name="auto_dc_dim_warning">This mode may alter colors and could affect how videos or images are displayed.</string>

    <!-- Saturation -->
    <string name="saturation_title">Saturation</string>
    <string name="saturation_summary">Control the saturation level of the display</string>
    <string name="saturation_footer_summary">Changing the color mode in display settings will override the saturation level, requiring it to be reapplied.</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Image preview -->
    <string name="image_preview_content_description">Preview</string>
    <string name="image_preview_next_page_content_description">Next</string>
    <string name="image_preview_previous_page_content_description">Previous</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Plays a 30-second audio to clear the speaker. If the speaker is lightly blocked, run this feature once or twice.</string>

    <!-- Thermal Profiles -->
    <string name="thermal_title">Dynamic thermal profiles</string>
    <string name="thermal_summary">Optimize thermal management by setting specific profiles for each app, like gaming or streaming.</string>
    <string name="thermal_main_switch_title">Use dynamic thermal profiles</string>
    <string name="thermal_per_app_profile_title">Per-App Profiles</string>
    <string name="thermal_profile_default">Default</string>
    <string name="thermal_profile_benchmark">Benchmark</string>
    <string name="thermal_profile_browser">Browser</string>
    <string name="thermal_profile_camera">Camera</string>
    <string name="thermal_profile_dialer">Dialer</string>
    <string name="thermal_profile_gaming">Gaming</string>
    <string name="thermal_profile_streaming">Streaming</string>
    <string name="thermal_auto_selection_title">Automatic Selection Mode</string>
    <string name="thermal_auto_selection_summary">Allows the system to choose the best thermal profile for the application in use.</string>

    <!-- Refresh Rate -->
    <string name="refresh_rate_title">Per-app refresh rate</string>
    <string name="refresh_rate_summary">Set a specific refresh rate for each application individually</string>    <string-array name="refresh_profile_entries">
    	<item>Default</item>
    	<item>60Hz</item>
    	<item>90Hz</item>
    </string-array>

</resources>
