<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/thermal_title">

    <com.android.settingslib.widget.TopIntroPreference
        android:key="thermal_intro"
        android:title="@string/thermal_summary" />

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="thermal_main_switch"
        android:title="@string/thermal_main_switch_title"
        android:defaultValue="false" />

    <androidx.preference.SwitchPreferenceCompat
        android:key="thermal_auto_selection_switch"
        android:title="@string/thermal_auto_selection_title"
        android:summary="@string/thermal_auto_selection_summary"
        android:defaultValue="false"
        android:dependency="thermal_main_switch" />

    <PreferenceCategory
        android:key="per_app_profile_category"
        android:title="@string/thermal_per_app_profile_title"
        android:dependency="thermal_main_switch" />

</PreferenceScreen>