<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.TopIntroPreference
        android:key="auto_hbm_intro"
        android:title="@string/auto_hbm_summary" />

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="auto_hbm"
        android:title="@string/auto_hbm_main_switch_title"
        android:defaultValue="false" />

    <com.android.settingslib.widget.UsageProgressBarPreference
        android:key="current_lux_level"
        android:title="@string/current_lux_title"
        android:selectable="false" />

    <org.lineageos.settings.CustomSeekBarPreference
        android:key="auto_hbm_activation_threshold"
        android:title="@string/auto_hbm_activation_threshold_title"
        android:summary="@string/auto_hbm_activation_threshold_summary"
        android:max="60000"
        android:min="1000"
        settings:units=" lux"
        android:defaultValue="@integer/config_autoHbmActivationThreshold" />

    <org.lineageos.settings.CustomSeekBarPreference
        android:key="auto_hbm_deactivation_threshold"
        android:title="@string/auto_hbm_deactivation_threshold_title"
        android:summary="@string/auto_hbm_deactivation_threshold_summary"
        android:max="60000"
        android:min="1000"
        settings:units=" lux"
        android:defaultValue="@integer/config_autoHbmDeactivationThreshold" />

</PreferenceScreen>